initial controller and jpa setup

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.mvc.view.prefix=/jsp/
+spring.mvc.view.suffix=.jsp
 
+server.port=8080
+
+jdbc.url=jdbc:postgresql://kenzi.jgrhome.com:5432/HomeController
+jdbc.userName=HomeController
+jdbc.pw=HomeController
+jdbc.driverClassName=org.postgresql.Driver
