--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -46,6 +46,17 @@
 			<artifactId>spring-boot-starter-web-services</artifactId>
 		</dependency>
 		
+
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		</dependency>
+		
 		<!--
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
